# handmade_learning

./: .gitignore  CMakeLists.txt  README.md
src/: main  main.cpp
src/essential/: activate_functions.cpp  activate_functions.h  eigen_unsopported.cpp  eigen_unsopported.h
src/essential/basefunc/: activate_functions.cpp  activate_functions.h  base_operation.cpp  base_operation.h  loss_functions.h
src/essential/basis/: functions.h  gradient.h  initializer.h  layers.h
src/essential/cuda_utils/: cuda_utils.h
src/essential/model/: simple_net.h  two_layer_net.h  two_layer_net_copy.h
src/essential/tensor/: tensor.cpp  tensor.h  tensor_core.h  tensor_cuda.cu  tensor_cuda.h
src/essential/utils/: minst_read.h
src/include/essential/: activate_functions.cpp  activate_functions.h
src/includes/definition/: type_definition.h
src/includes/essential/: activate_functions.cpp
